2010-08-13	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1674/docs
	* user/Makefile.am, user/dirstat.texi: Fix bad node reference.

2010-08-09	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1513/doc
	* user/chains.t: Added missing functions.  Uniform text for
	unprotected functions.

2010-08-03	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1650/cpukit
	* user/part.t: Clarify.

2010-07-30	Gedare Bloom <giddyup44@yahoo.com>

	PR 1599/cpukit
	* porting/interrupts.t: Rename _Context_Switch_necessary to
	_Thread_Dispatch_necessary to more properly reflect the intent.

2010-07-29	Gedare Bloom <giddyup44@yahoo.com>

	PR 1635/cpukit
	* porting/prioritybitmap.t: Refactoring of priority handling, to
	isolate the bitmap implementation of priorities in the supercore so
	that priority management is a little more modular. This change is in
	anticipation of scheduler implementations that can select how they
	manage tracking priority levels / finding the highest priority ready
	task. Note that most of the changes here are simple renaming, to
	clarify the use of the bitmap-based priority management.

2010-06-28	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1573/cpukit
	* porting/interrupts.t: Add a per cpu data structure which contains the
	information required by RTEMS for each CPU core. This encapsulates
	information such as thread executing, heir, idle and dispatch needed.

2010-06-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac, index.html.in, develenv/direct.t,
	posix_users/gen_size_report, started/nextstep.t,
	started_ada/buildada.t, user/conf.t, user/object.t: Remove ITRON API.
	* itron3.0/.cvsignore, itron3.0/Makefile.am, itron3.0/config.t,
	itron3.0/eventflags.t, itron3.0/fixedblock.t, itron3.0/gen_all,
	itron3.0/gen_section, itron3.0/gen_status_shell,
	itron3.0/interrupt.t, itron3.0/itron.texi, itron3.0/mailbox.t,
	itron3.0/memorypool.t, itron3.0/msgbuffer.t, itron3.0/network.t,